--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,7 +6,8 @@ appcompat = "1.6.1"
 constraintlayout = "2.1.4"
 material = "1.9.0"
 lifecycle = "2.6.2"
-room = "2.5.2"
+fragment-ktx = "1.6.2"
+room = "2.6.0"
 ktor = "2.3.5"
 paging = "3.2.1"
 coil = "2.4.0"
@@ -18,15 +19,14 @@ kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutine
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlin-serialization-json" }
 androidx-appcompat = { module = "androidx.appcompat:appcompat", version.ref = "appcompat" }
 androidx-constraintlayout = { module = "androidx.constraintlayout:constraintlayout", version.ref = "constraintlayout" }
+androidx-fragment = { module = "androidx.fragment:fragment-ktx", version.ref = "fragment-ktx" }
 android-material = { module = "com.google.android.material:material", version.ref = "material" }
 # ViewModel
 androidx-lifecycle-viewmodel = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "lifecycle" }
-# Room
-room = { module = "androidx.room:room-ktx", version.ref = "room" }
 # Ktor
 ktor-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
 ktor-android = { module = "io.ktor:ktor-client-android", version.ref = "ktor" }
-ktor-negotiation = { module= "io.ktor:ktor-client-content-negotiation", version.ref = "ktor" }
+ktor-negotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktor" }
 ktor-serialization = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktor" }
 ktor-logging = { module = "io.ktor:ktor-client-logging", version.ref = "ktor" }
 # Paging
@@ -47,7 +47,7 @@ hilt = { id = "com.google.dagger.hilt.android", version = "2.44" }
 
 [bundles]
 kotlin = ["androidx-core-ktx", "kotlinx-coroutines-android", "kotlinx-serialization-json"]
-androidx = ["androidx-appcompat", "androidx-constraintlayout", "androidx-lifecycle-viewmodel"]
+androidx = ["androidx-appcompat", "androidx-constraintlayout", "androidx-lifecycle-viewmodel", "androidx-fragment"]
 ktorclient = ["ktor-core", "ktor-android", "ktor-negotiation", "ktor-serialization", "ktor-logging"]
-pagigng = ["paging-runtime", "paging-runtime"]
+pagigng = ["paging-runtime", "room-paging"]
 hilt = ["hilt-android", "hilt-kapt"]
