--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,11 +9,13 @@ lifecycle = "2.6.2"
 fragment-ktx = "1.6.2"
 room = "2.6.0"
 ktor = "2.3.5"
+logback = "1.2.8"
 paging = "3.2.1"
 coil = "2.4.0"
 hilt = "2.48"
 
 [libraries]
+# Base
 androidx-core-ktx = { module = "androidx.core:core-ktx", version.ref = "kotlin" }
 kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlin-coroutines" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlin-serialization-json" }
@@ -29,6 +31,7 @@ ktor-android = { module = "io.ktor:ktor-client-android", version.ref = "ktor" }
 ktor-negotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktor" }
 ktor-serialization = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktor" }
 ktor-logging = { module = "io.ktor:ktor-client-logging", version.ref = "ktor" }
+logback-classic = { module = "ch.qos.logback:logback-classic", version.ref = "logback" }
 # Paging
 paging-runtime = { module = "androidx.paging:paging-runtime", version.ref = "paging" }
 room-paging = { module = "androidx.room:room-paging", version.ref = "room" }
@@ -48,6 +51,6 @@ hilt = { id = "com.google.dagger.hilt.android", version = "2.44" }
 [bundles]
 kotlin = ["androidx-core-ktx", "kotlinx-coroutines-android", "kotlinx-serialization-json"]
 androidx = ["androidx-appcompat", "androidx-constraintlayout", "androidx-lifecycle-viewmodel", "androidx-fragment"]
-ktorclient = ["ktor-core", "ktor-android", "ktor-negotiation", "ktor-serialization", "ktor-logging"]
+ktorclient = ["ktor-core", "ktor-android", "ktor-negotiation", "ktor-serialization", "ktor-logging", "logback-classic"]
 pagigng = ["paging-runtime", "room-paging"]
 hilt = ["hilt-android", "hilt-kapt"]
